# SolEsTT

./: .gitignore  AR_VR_FEATURES.md  AUJOURD_HUI.md  Anchor.toml  CANVA_PRESENTATION_GUIDE.md  Cargo.toml  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  FEATURES_OVERVIEW.md  GUIDE_PRESENTATION_CANVA.md  HACKATHON_FEATURES.md  HACKATHON_SUBMISSION.md  INTEGRATION_GUIDE.md  NEXT_STEPS.md  QUICKSTART.md  README.md  STATUS_FINAL.md  TRANSLATION_GUIDE.md  build-programs.bat  create-deployer-wallet.js  generate-program-ids.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.claude/: settings.local.json
anchor/programs/loyalty_rewards/: Cargo.toml
anchor/programs/loyalty_rewards/src/: lib.rs
anchor/programs/mortgage_credit/: Cargo.toml
anchor/programs/mortgage_credit/src/: lib.rs
anchor/programs/property_diligence/: Cargo.toml
anchor/programs/property_diligence/src/: lib.rs
anchor/programs/property_tokenization/: Cargo.toml
anchor/programs/property_tokenization/src/: lib.rs
anchor/programs/rental_payment/: Cargo.toml
anchor/programs/rental_payment/src/: lib.rs
anchor/programs/rwa_collateral/: Cargo.toml
anchor/programs/rwa_collateral/src/: lib.rs
app/: globals.css  layout.tsx  page.tsx  page_junot.tsx
app/badges/: page.tsx
app/compare/: page.tsx
app/defi/: page.tsx
app/governance/: page.tsx
app/marketplace/: page.tsx
app/notifications/: page.tsx
app/portfolio/: page.tsx
app/properties/: page.tsx
app/properties/[id]/: page.tsx
app/properties/create/: page.tsx
app/rentals/: page.tsx
components/: HackathonBanner.tsx  Header.tsx
components/3d/: Property3DViewer.tsx
components/animations/: AnimatedCounter.tsx  AnimatedStats.tsx  PageTransition.tsx
components/ar/: ARPropertyViewer.tsx
components/gallery/: ImageGallery.tsx
components/notifications/: NotificationCenter.tsx
components/property/: PropertyCard.tsx
components/upload/: ImageUploader.tsx  Model3DUploader.tsx
components/wallet/: WalletButton.tsx
contexts/: LanguageContext.tsx  WalletContextProvider.tsx
lib/solana/: config.ts  mockData.ts  programs.ts  testData.ts  types.ts
lib/solana/hooks/: useBadges.ts  useCollateral.ts  useDueDiligence.ts  useGovernance.ts  useLoyalty.ts  useMortgage.ts  useNotifications.ts  usePropertyTokenization.ts  useRentalPayment.ts
lib/solana/instructions/: propertyTokenization.ts  rentalPayment.ts
scripts/: deploy.sh  test-transactions.ts
simple-program/: Cargo.toml
simple-program/src/: lib.rs
