[workspace]
resolver = "2"
members = [
    "anchor/programs/property_tokenization",
    "anchor/programs/rental_payment",
    "anchor/programs/mortgage_credit",
    "anchor/programs/rwa_collateral",
    "anchor/programs/property_diligence",
    "anchor/programs/loyalty_rewards",
]

[workspace.dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
