[package]
name = "loyalty_rewards"
version = "0.1.0"
description = "Loyalty and yield rewards system for real estate platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loyalty_rewards"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
