[package]
name = "loyalty_rewards"
version = "0.1.0"
description = "Loyalty and yield rewards system for real estate platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "loyalty_rewards"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"





