[package]
name = "mortgage_credit"
version = "0.1.0"
description = "Decentralized mortgage and credit system for real estate"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mortgage_credit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
