[package]
name = "property_diligence"
version = "0.1.0"
description = "On-chain property due diligence and verification system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "property_diligence"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }





