[package]
name = "property-tokenization"
version = "0.1.0"
description = "Property tokenization program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "property_tokenization"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
